app/assets/stylesheets/local/collections.scss
$collection-index-box-width: 266px;
$collection-index-box-height: 266px;
$collection-index-box-margin: 17px;

.collections-index {
  .collections-index-title {
    text-align: center;
    margin-top: 48px;
    margin-bottom: 43px;
  }

  .collections-index-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    margin: -1 * $collection-index-box-margin; /* negate flex-item margins on outer border */

    .collection {
      position: relative;
      width: $collection-index-box-width;
      height: $collection-index-box-height;
      margin: $collection-index-box-margin;

      @include all-white-links;

      .collection-title-wrapper {
        /* overlay on image */
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 75px;
        background-color: $brand-inverse;
        padding: 10px;

        .collection-title {
          text-align: center;
        }
      }
    }

    /* A 0-height box that spaces out columns to left-align items in
       last column */
    .collection-spacer {
      visibility: hidden;
      width: $collection-index-box-width;
      height: 0;
      margin: 0 $collection-index-box-margin;
    }
  }
}

